<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mynteyed</name>
  <version>1.9.0</version>
  <description>Mynt Eye D SDK</description>
  <maintainer email="cjtucker321@gmail.com">coalman321</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>opencv4</build_depend>
  <build_depend>pthread</build_depend>
  <build_depend>JPEG</build_depend>

  <member_of_group>rosidl_default_generators</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
